--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,5 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
       value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
-    bootstrap-address: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
-    bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
+    bootstrap-address: ${KAFKA_BROKER:"localhost:9200"}
+    bootstrap-servers: ${KAFKA_BROKER:"localhost:9200"}
